--- a/TODO
+++ b/TODO
@@ -40,3 +40,7 @@ infile: bla
 
 echo "$" ---> should print $
 echo $ ---> should print $
+
+
+
+nayel linked list-i u array-i pahy execve-i u export-i jmnk, +pipe-eri mej
